--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,29 +1,9 @@
-version: "3"
-networks:
-    application:
-        driver: bridge
-volumes:
-    storage:
-        driver: local
+version: '3.8'
 services:
-    app:
-        image: autodoc/environment-php:7.3  
-        ports:
-            - 80:8080
-        volumes:
-            - /src:/src/php/app
-        networks:
-            - application
-        depends_on:
-            - mysql        
-    mysql:
-        image: mysql:5.7
-        ports:
-            - "3306:3306"
-        environment:
-            - MYSQL_ROOT_PASSWORD=autodoc
-            - MYSQL_DATABASE=dbEstudo
-        volumes:
-            - storage:/var/lib/mysql
-        networks:
-            - application
+  php-apache-environment:
+    container_name: php-apache
+    image: php:8.0-apache
+    volumes:
+      - ./app:/var/www/html/
+    ports:
+      - 8000:80
